--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
     name="keywords"
-    content="home appliances products manufacturers in India, best washing machine, home appliances products in India, washing machine products"
+    content="home appliances products manufacturers in India, best washing machine,best washing machine in india, home appliances products in India, washing machine products"
   />
     <meta name="google-site-verification" content="Jm6g0lmd-R49d5lbuKUyjfTKk4QA5q6_Rc2GZp5YzOY" />
 
