addes page diwali offer

--- a/public/index.html
+++ b/public/index.html
@@ -10,20 +10,36 @@
       content="Gplus is home appliances manufacturers in India and also B2B business in India. G Plus products made Best washing machine with Innovative Technology gives powerful Performance."
     />
     <meta
-    name="keywords"
-    content="home appliances products manufacturers in India, best washing machine,best washing machine in india, home appliances products in India, washing machine products"
-  />
-    <meta name="google-site-verification" content="Jm6g0lmd-R49d5lbuKUyjfTKk4QA5q6_Rc2GZp5YzOY" />
+      name="keywords"
+      content="home appliances products manufacturers in India, best washing machine,best washing machine in india, home appliances products in India, washing machine products"
+    />
+    <meta
+      name="google-site-verification"
+      content="Jm6g0lmd-R49d5lbuKUyjfTKk4QA5q6_Rc2GZp5YzOY"
+    />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-   
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+
     <title>Gplus India|home appliances products manufacturers in India</title>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-B84SRN9VKW"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-B84SRN9VKW");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
   </body>
 </html>
