--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="keywords"
-      content="home appliances products manufacturers in India, best washing machine,best washing machine in india, home appliances products in India, washing machine products"
+      content="home appliances products manufacturers in India, best washing machine,best washing machine in india, home appliances products in India, washing machine products, Top washing machine near me, Top 10 washing machine 2024, Best washing machine in karnataka, Best washing machine in south"
     />
     <meta
       name="google-site-verification"
