--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,13 @@
       name="keywords"
       content="home appliances products manufacturers in India, best washing machine,best washing machine in india, home appliances products in India, washing machine products, Top washing machine near me, Top 10 washing machine 2024, Best Energy efficiency Diswasher, dishwasher near me, 16 plates set best dishwasher, Best dishwasher with 16 plates, Best premium dishwasher, Best luxury dishwasher"
     />
-    <meta
+    <!-- <meta
       name="google-site-verification"
       content="Jm6g0lmd-R49d5lbuKUyjfTKk4QA5q6_Rc2GZp5YzOY"
+    /> -->
+    <meta
+      name="google-site-verification"
+      content="DXCE4gKAYk2HlMucKqtFi1S8nq1_Bmt--wWBo4_hO9s"
     />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -37,12 +41,10 @@
 
       gtag("config", "G-B84SRN9VKW");
     </script>
-
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="https://smtpjs.com/v3/smtp.js">
-    </script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
   </body>
 </html>
