--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
     <title>Gplus India|home appliances products manufacturers in India</title>
     <!-- Google tag (gtag.js) -->
-    <script
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-B84SRN9VKW"
     ></script>
@@ -40,6 +40,20 @@
       gtag("js", new Date());
 
       gtag("config", "G-B84SRN9VKW");
+    </script> -->
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-HQ75HX5T7C"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-HQ75HX5T7C");
     </script>
   </head>
   <body>
